--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
 <body>
 
 
-    <header>
-        <h1><a href="index.html">Styles Conference</a></h1>
-        <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
+    <header class="container group">
+        <h1 class="logo">
+            <a href="index.html">Styles <br> Conference</a>
+        </h1>
+        <h3 class="tagline">August 24&ndash;26th &mdash; Chicago, IL</h3>
 
-        <nav>
+        <nav class="primary-nav">
             <a href="index.html">Home</a>
             <a href="speakers.html">Speakers</a>
             <a href="schedule.html">Schedule</a>
@@ -24,17 +26,20 @@
         </nav>
     </header>
 
-    <section>
-
-
-        <section>
+    <section class="hero container">
+        <div class="hero-inner">
             <h2>Dedicated to craft of building websites</h2>
             <p>Every year the brightest web designers and front-end developers descend on Chicago to discuss the latest
                 technologies. Join us this August!</p>
-            <a href="register.html">Register Now</a>
-        </section>
+            <a href="register.html" class="btn btn-alt">Register Now</a>
+        </div>
+    </section>
 
-        <section>
+    <section class="grid">
+
+        <!-- Speakers -->
+
+        <section class="col-1-3 teaser">
             <a href="speakers.html">
                 <h5>Speakers</h5>
                 <h3>World-Class Speakers</h3>
@@ -42,7 +47,9 @@
             <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.</p>
         </section>
 
-        <section>
+        <!-- Schedule -->
+
+        <section class="col-1-3 teaser">
             <a href="schedule.html">
                 <h5>Schedule</h5>
                 <h3>Three Inspiring Days</h3>
@@ -50,7 +57,9 @@
             <p>Enjoy three inspiring and action-packed days of talks, gatherings, and all-around good times.</p>
         </section>
 
-        <section>
+        <!-- Venue -->
+
+        <section class="col-1-3 teaser">
             <a href="venue.html">
                 <h5>Venue</h5>
                 <h3>The Chicago Theatre</h3>
@@ -60,7 +69,7 @@
 
     </section>
 
-    <footer>
+    <footer class="container primary-footer group">
         <small>&copy; Styles Conference</small>
         <nav>
             <a href="index.html">Home</a>
