--- a/index.html
+++ b/index.html
@@ -6,77 +6,93 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Styles Conference</title>
     <link rel="stylesheet" href="./assets/stylesheets/main.css">
+    <!-- font -->
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
-
-
-    <header class="container group">
+    <header class="primary-header container group">
         <h1 class="logo">
             <a href="index.html">Styles <br> Conference</a>
         </h1>
         <h3 class="tagline">August 24&ndash;26th &mdash; Chicago, IL</h3>
 
-        <nav class="primary-nav">
-            <a href="index.html">Home</a>
-            <a href="speakers.html">Speakers</a>
-            <a href="schedule.html">Schedule</a>
-            <a href="venue.html">Venue</a>
-            <a href="register.html">Register</a>
+        <nav class="nav primary-nav">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="speakers.html">Speakers</a></li>
+                <li><a href="schedule.html">Schedule</a></li>
+                <li><a href="venue.html">Venue</a></li>
+                <li><a href="register.html">Register</a></li>
+            </ul>
         </nav>
     </header>
 
-    <section class="hero container">
-        <div class="hero-inner">
-            <h2>Dedicated to craft of building websites</h2>
-            <p>Every year the brightest web designers and front-end developers descend on Chicago to discuss the latest
-                technologies. Join us this August!</p>
-            <a href="register.html" class="btn btn-alt">Register Now</a>
-        </div>
+    <section class="row-alt">
+        <section class="hero container">
+            <div class="hero-inner">
+                <h2>Dedicated to Craft of Building Websites</h2>
+                <p>Every year the brightest web designers and front-end developers descend on Chicago to discuss the
+                    latest
+                    technologies. Join us this August!</p>
+                <a href="register.html" class="btn btn-alt">Register Now</a>
+            </div>
+        </section>
     </section>
 
-    <section class="grid">
+    <section class="row">
+        <div class="grid">
 
-        <!-- Speakers -->
+            <!-- Speakers -->
 
-        <section class="col-1-3 teaser">
-            <a href="speakers.html">
+            <section class="col-1-3 teaser">
                 <h5>Speakers</h5>
-                <h3>World-Class Speakers</h3>
-            </a>
-            <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.</p>
-        </section>
+                <a href="speakers.html">
+                    <img src="./assets/images/home/speakers.jpg" alt="Professional Speaker">
+                    <h3>World-Class Speakers</h3>
+                </a>
+                <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.
+                </p>
+            </section>
 
-        <!-- Schedule -->
+            <!-- Schedule -->
 
-        <section class="col-1-3 teaser">
-            <a href="schedule.html">
+            <section class="col-1-3 teaser">
                 <h5>Schedule</h5>
-                <h3>Three Inspiring Days</h3>
-            </a>
-            <p>Enjoy three inspiring and action-packed days of talks, gatherings, and all-around good times.</p>
-        </section>
+                <a href="schedule.html">
+                    <img src="./assets/images/home/schedule.jpg" alt="Schedule">
+                    <h3>Three Inspiring Days</h3>
+                </a>
+                <p>Enjoy three inspiring and action-packed days of talks, gatherings, and all-around good times.</p>
+            </section>
 
-        <!-- Venue -->
+            <!-- Venue -->
 
-        <section class="col-1-3 teaser">
-            <a href="venue.html">
+            <section class="col-1-3 teaser">
                 <h5>Venue</h5>
-                <h3>The Chicago Theatre</h3>
-            </a>
-            <p>Within the heart of downtown Chicago, The Chicago Theatre will provide a beautiful conference venue.</p>
-        </section>
+                <a href="venue.html">
+                    <img src="./assets/images/home/venue.jpg" alt="Chicago Theatre">
+                    <h3>The Chicago Theatre</h3>
+                </a>
+                <p>Within the heart of downtown Chicago, The Chicago Theatre will provide a beautiful conference venue.
+                </p>
+            </section>
+        </div>
 
     </section>
 
     <footer class="container primary-footer group">
         <small>&copy; Styles Conference</small>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="speakers.html">Speakers</a>
-            <a href="schedule.html">Schedule</a>
-            <a href="venue.html">Venue</a>
-            <a href="register.html">Register</a>
+        <nav class="nav">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="speakers.html">Speakers</a></li>
+                <li><a href="schedule.html">Schedule</a></li>
+                <li><a href="venue.html">Venue</a></li>
+                <li><a href="register.html">Register</a></li>
+            </ul>
         </nav>
     </footer>
 </body>
